# megabool-c

./: README.md  meson.build
src/: megabool.c  megabool.h  meson.build
tests/: main.c  meson.build
